--- a/fela-vue/package.json
+++ b/fela-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fela-vue",
+  "name": "fela-vue-docs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "fela-vue": "^2.6.0-beta.2",
+    "marked": "^0.6.2",
+    "monaco-editor": "^0.16.2",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
